# gender-bias-detection

./: .env.example  .gitignore  LICENSE  README.md  clustering_run.py  dev.ipynb  dev.py  test.py  testset.csv
chrome_profile/: DevToolsActivePort  Local State  first_party_sets.db
data/: annotated_dataset.csv  annotated_role_stereotypes_norm.csv  annotated_sexual_language.csv  missing_ids.csv  testset.csv
docs/: annotation-guideline.md  data-format-specification.md  example-prompt-synthesize.md  (+2 more)
services/clustering/: README.md  bertopic_pipeline_colab.ipynb  pyproject.toml
services/clustering/examples/: bertopic_baseline.py  run_pipeline.py
services/clustering/src/clustering/: __init__.py  __main__.py  pipeline.py
services/clustering/src/clustering/bertopic/: __init__.py  __main__.py  pipeline.py
services/clustering/src/clustering/topicmodeling/: __init__.py  __main__.py  pipeline.py
services/clustering/src/clustering/utils/: __init__.py  preprocessing.py
services/scraper/: pyproject.toml
services/scraper/examples/: dev_youtube.py
services/scraper/src/scraper/: combine_results.py  config.py  constants.py  dataclass.py  postprocessing.py  utils.py
services/scraper/src/scraper/blog_based/: TweetScraper.ipynb  selenium_scraper.py  splitcsv.ipynb  tweetScrape.ipynb  tweets_data.csv
services/scraper/src/scraper/blog_based/chunks/: tweets_part_0001.csv  tweets_part_0002.csv  tweets_part_0003.csv  tweets_part_0004.csv  tweets_part_0005.csv  tweets_part_0006.csv  tweets_part_0007.csv  tweets_part_0008.csv  tweets_part_0009.csv  tweets_part_0010.csv  tweets_part_0011.csv  tweets_part_0012.csv  tweets_part_0013.csv  tweets_part_0014.csv  tweets_part_0015.csv  tweets_part_0016.csv  tweets_part_0017.csv  tweets_part_0018.csv  tweets_part_0019.csv  tweets_part_0020.csv  tweets_part_0021.csv  tweets_part_0022.csv  tweets_part_0023.csv  tweets_part_0024.csv  tweets_part_0025.csv  tweets_part_0026.csv  tweets_part_0027.csv  tweets_part_0028.csv  tweets_part_0029.csv  tweets_part_0030.csv  tweets_part_0031.csv  tweets_part_0032.csv  tweets_part_0033.csv  tweets_part_0034.csv  tweets_part_0035.csv  tweets_part_0036.csv  tweets_part_0037.csv  tweets_part_0038.csv  tweets_part_0039.csv  tweets_part_0040.csv  (+155 more)
services/scraper/src/scraper/vdo-based/: tiktok.py  youtube.py
services/scraper/src/scraper/vdo_based/: __init__.py  tiktok.py  youtube.py
services/synthesizer/: README.md  dedup_topup.py  generate_synthetic.py  pyproject.toml  synthesize_binary.py
services/synthesizer/src/synthesizer_v2/: __init__.py  __main__.py  constants.py  gemini.py  gemini_batch.py  generate.py  openrouter.py
(+2381 files in other folders)
