[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "clustering"
version = "0.0.1"
authors = [
  { name = "Nanphat Tongsirisukool", email = "nanphatx@hotmail.com" },
  { name = "Natcha Trairattanasak", email = "pnbookclub@gmail.com" },
]
description = "clustering module"
readme = "README.md"
requires-python = "==3.10"
classifiers = ["Programming Language :: Python :: 3"]
dependencies = [
    "loguru",
    "bertopic",
    "hdbscan",
    "pandas",
    "pythainlp",
    "scikit-learn",
    "sentence-transformers",
    "umap-learn",
]

[project.optional-dependencies]
dev = ["pre-commit", "ipykernel", "ipywidgets"]
