[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "scraper"
version = "0.0.1"
authors = [
  { name = "Nanphat Tongsirisukool", email = "nanphatx@hotmail.com" },
  { name = "Natcha Trairattanasak", email = "pnbookclub@gmail.com" },
]
description = "scraper module"
readme = "README.md"
requires-python = ">=3.10"
classifiers = ["Programming Language :: Python :: 3"]
dependencies = ["yt_dlp","TikTokApi","pandas","pythainlp"]

[project.optional-dependencies]
dev = ["pre-commit", "ipykernel", "ipywidgets"]
