[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "synthesizer_v2"
version = "0.1.0"
authors = []
description = "Synthetic Thai gender-bias data generator aligned with annotation-guideline.md (Binary + 3 Subtypes)"
readme = "README.md"
requires-python = ">=3.10"
classifiers = ["Programming Language :: Python :: 3"]
dependencies = []

[project.optional-dependencies]
# pip install "synthesizer_v2[gemini]" to enable Vertex AI batch prediction
gemini = [
    "google-auth>=2.0",
    "google-auth-httplib2",
    "google-cloud-storage>=2.0",
]
dev = ["pre-commit", "ipykernel", "ipywidgets"]

[project.scripts]
synth-v2 = "synthesizer_v2.generate:main"

[tool.setuptools.packages.find]
where = ["src"]
